WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231280
CoreAudioSharedUnit should not clear its persistentID when device capture changes
https://bugs.webkit.org/show_bug.cgi?id=231280
Summary
CoreAudioSharedUnit should not clear its persistentID when device capture cha...
youenn fablet
Reported
2021-10-05 22:58:37 PDT
CoreAudioSharedUnit should not clear its persistentID when device capture changes
Attachments
Patch
(1.94 KB, patch)
2021-10-05 23:13 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-10-05 23:12:10 PDT
<
rdar://83729357
>
youenn fablet
Comment 2
2021-10-05 23:13:10 PDT
Created
attachment 440333
[details]
Patch
youenn fablet
Comment 3
2021-10-05 23:57:35 PDT
Refactoring at
https://bugs.webkit.org/show_bug.cgi?id=231284
should allow us to avoid this kind of regression
EWS
Comment 4
2021-10-06 09:56:51 PDT
Committed
r283628
(
242580@main
): <
https://commits.webkit.org/242580@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440333
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug